--- a/pom.xml
+++ b/pom.xml
@@ -25,14 +25,16 @@
 
   <dependencies>
 
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-actuator</artifactId>
-    </dependency>
-
+    <!-- Adicione suas dependências aqui, mas não altere as que já estão configuradas -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <scope>runtime</scope>
     </dependency>
 
     <dependency>
@@ -41,10 +43,14 @@
     </dependency>
 
     <dependency>
-      <groupId>com.mysql</groupId>
-      <artifactId>mysql-connector-j</artifactId>
-      <scope>runtime</scope>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+      <version>3.2.0</version>
     </dependency>
+
+
+
+    <!-- Spring Boot -->
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
